--- a/public/stylesheet/layout/grid.scss
+++ b/public/stylesheet/layout/grid.scss
@@ -11,6 +11,9 @@ article {
   width: 100%;
   height: 100vh;
   overflow: hidden;
+  @media screen and (max-width: 459px) {
+    overflow-x: hidden;
+  }
 
   .contentWrap {
     width: 100%;
@@ -76,7 +79,7 @@ article {
   .Visual_1 {
     background-color: $oc-gray-0;
     left: 100%;
-    overflow: auto;
+    overflow-x: hidden;
 
     .contentMenu {
       position: absolute;
@@ -171,21 +174,21 @@ article {
   .Visual_2 {
     background-color: $oc-gray-0;
     left: 200%;
-    overflow: auto;
+    overflow-x: hidden;
   }
 
   .Visual_3 {
     background-color: $oc-gray-0;
     left: 100%;
     top: 100%;
-    overflow: auto;
+    overflow-x: hidden;
   }
 
   .Visual_4 {
     background-color: $oc-gray-0;
     left: 100%;
     bottom: 100%;
-    overflow: auto;
+    overflow-x: hidden;
   }
 }
 
