--- a/public/stylesheet/pages/SoccerGame.scss
+++ b/public/stylesheet/pages/SoccerGame.scss
@@ -1,5 +1,4 @@
 .soccer-game {
-
   .panel-score {
     font-size: 30px;
     margin: 25px;
@@ -25,6 +24,9 @@
     width: 500px;
     height: 350px;
     margin: 0 auto;
+    @media screen and(max-width:459px) {
+      width: 100%;
+    }
   }
 
   .korea-score {
@@ -59,6 +61,9 @@
     width: 500px;
     margin: 0 auto;
     height: 200px;
+    @media screen and(max-width:459px) {
+      width: 100%;
+    }
   }
 
   .div-korea {
@@ -107,6 +112,4 @@
     color: steelblue;
     font-weight: bold;
   }
-
-  
 }
