--- a/views/Game/RouletteGame.ejs
+++ b/views/Game/RouletteGame.ejs
@@ -26,7 +26,7 @@
                             font-weight: bold;
                             font-size: 20px;">다시하기</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 </div>
-            <td width="438" height="582" class="the_wheel" align="center" valign="center">
+            <td  class="the_wheel" >
                 <canvas id="canvas" width="434" height="434">
                 </canvas>
             </td>
