--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -168,6 +168,18 @@ article .si-z {
   background-color: orange;
 }
 
+article .video-container {
+  width: 100%;
+  height: 100%;
+  /* position: absolute; */
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 article .Visual_1 {
   background-color: #f8f9fa;
   left: 100%;
