--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,12 @@
     <article>
       
       <section class="si-z">
+        <div class="video-container">       
+        <video muted autoplay loop>
+          <source src="img/1060959961-preview.mp4" type="video/mp4">
+          <strong>Your browser does not support the video tag.</strong>
+        </video>
+      </div>
         <div class="contentWrap">
           <h1>오늘뭐 <span>먹지?</span><span>!</span></h2>
             <img src="img/food.png" alt="순두부지개/">            
