--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,11 +17,13 @@
 <body>
   <div class="wrapper">
     <article>
-      
+      <div>
+        <% include header %>
+      </div>      
       <section class="si-z">
         <div class="video-container">       
         <video muted autoplay loop>
-          <source src="img/1060959961-preview.mp4" type="video/mp4">
+          <source src="img/food.mp4" type="video/mp4">
           <strong>Your browser does not support the video tag.</strong>
         </video>
       </div>
@@ -39,9 +41,7 @@
         </div> -->
       </section>
       <div class="Visual_1 si-z">
-        <div>
-          <% include header %>
-        </div>
+        
         <div class="intro">
           <h2>게임을 통해 점심을 정해보세요 !</h2>
           <p>총 3가지의 게임이 있습니다.</p>
