--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,7 +138,8 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 <script src="./scripts/script.js" charset="utf-8"></script>
-<script src="https://platform.fatsecret.com/js?key=2086cd74bbb0488f8ee1f690352a8b45&auto_template=false"></script>
+<script src="https://platform.fatsecret.com/js?key=2086cd74bbb0488f8ee1f690352a8b45"></script>
+
 <!-- <div id="my_div" class="fatsecret_container" ></div> -->
 
 
