--- a/views/index.ejs
+++ b/views/index.ejs
@@ -156,7 +156,7 @@ fatsecret.setCanvas("home"); */
       
       data: {
         method: 'food.get.v2',
-        food_id: '4384'
+        food_id: 4384
       },
       
       success: function (s) {
@@ -213,7 +213,7 @@ fatsecret.setCanvas("home"); */
 		  },
       data: {
         method: "food.get.v2",
-        food_id: "4384"
+        food_id: 4384
       },
       
       success: function (s) {
@@ -249,7 +249,7 @@ fatsecret.setCanvas("home"); */
 		    "Content-Type": "application/json;charset=UTF-8"
 		  },
       data: {
-        food_id: "4384"
+        food_id: 4384
       },
       
       success: function (s) {
