--- a/views/myPage.ejs
+++ b/views/myPage.ejs
@@ -47,11 +47,12 @@
             <table class="table table-striped table-hover">
               <thead>
                 <tr style="background: lightslategrey" class="thead-title">
-                  <th width="13%">번호</th>
-                  <th width="40%">음식</th>
-                  <th width="14%">닉네임</th>
+                  <th width="10%">번호</th>
+                  <th width="26%">음식</th>
+                  <th width="20%">칼로리</th>
+                  <!-- <th width="14%">닉네임</th> -->
                   <th width="20%">식사일</th>
-                  <th width="13%">삭제</th>
+                  <th width="10%">삭제</th>
                 </tr>
               </thead>
               <tbody>
@@ -60,7 +61,8 @@
                 <tr>
                   <td id="title"><%= twit[i].id %></td>
                   <td id="title"><%= twit[i].food %></td>
-                  <td id="title"><%= user.nick %></td>
+                  <td id="title"><%= twit[i].foodKcal %></td>
+                  <!-- <td id="title"><%= user.nick %></td> -->
                   <td id="title"><%= twit[i].moment %></td>
                   <td id="title">
                     <form action="/foodsave/<%=twit[i].id%>" method="post">
